SERVER-79669 remove ClientCursor references from shard_role.h

This fixes build compile_dist_test on UBSAN variants.

Co-authored-by: Yujin Kang Park <36410031+ykangpark@users.noreply.github.com>